# agentic-kg

./: .env.template  .gitmessage.txt  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  requirements.txt
agentic_kg/: __init__.py  agent.py  neo4j_for_adk.py  prompts.py
agentic_kg/apps/: cypher_cli.py  test_connection.py
agentic_kg/sub_agents/: __init__.py
agentic_kg/tools/: __init__.py
assets/: agentic-kg-diagrams.excalidraw
cli/: README.md  __init__.py  augment_csv.py  copy_to_import.py  csv_to_md.py  imitate_csv.py  list_import_dir.py  one_to_many.py  reset_neo4j.py
cli/lib/: imitate.py  neo4j_utils.py  title_generator.py
cli/prompts/: brief_actor_bio.txt  movie_plot.txt  movie_reviewer.txt
data/bom/: README.md  add_part_numbers.py  add_part_numbers_fixed.py  components.csv  consolidate_assemblies.py  consolidate_subassemblies.py  create_assembly_files.py  create_assembly_instructions.py  create_subassembly_files.py  create_supplier_catalogs.py  furniture_types.csv  part_numbers_reference.csv  part_supplier_mapping.csv  part_suppliers.csv  products.csv  swedish_towns.csv
data/full-bom/: assemblies.csv  cleanup_redundant_files.py  combine_data.py  create_redundant_suppliers.py  create_supplier_catalogs.py  create_suppliers.py  part_supplier_details.csv
data/movies/: movies.csv  people.csv  recent_movies.csv  some_acting_roles.csv  some_actors_with_bios.csv  some_movies.csv  some_movies_with_plots.csv
data/social/: fan_reviews_us.csv  movie_fans.csv  movie_fans_us.csv  movie_reviews_us.csv  relationships.csv  some_movie_fans.csv
data_synthesis/: README.md  csv_to_md.py  imitate_csv.py
experimental/: agent.py  model_config.py  prompts.py
notebooks/: 0-overview.ipynb  1-intro_to_adk.ipynb  2-user_intent.ipynb  3-file_suggestions.ipynb  4-schema_proposal_structured.ipynb  5-schema_proposal_unstructured.ipynb  helpers.py  intro_to_adk.ipynb  neo4j_for_adk.py  tools.py
synthesis/: README.md  augment_csv.py  imitate_csv.py
transcripts/: bom.md  cypher_and_files.md  just_cypher.md
(+631 files in other folders)
