[project]
name = "agentic-kg"
version = "0.1.0"
description = "Agents and tools for working with a knowledge graph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clevercsv[full]>=0.8.3",
    "google-adk>=1.4.2",
    "litellm>=1.73.0",
    "neo4j>=5.28.1",
    "neo4j-graphrag>=1.7.0",
    "openai>=1.90.0",
    "python-dotenv>=1.0.0",
    "click>=8.2.1",
    "csvkit>=2.1.0",
    "faker>=37.4.0",
    "nanoid>=2.0.0",
    "inflect>=6.0.0",
    "spacy>=3.8.7",
    "pyyaml>=6.0.2",
    "ipykernel>=6.29.5",
    "pip>=25.1.1",
]

[dependency-groups]
dev = [
    "agentic-kg",
    "pytest>=8.4.1",
    "uv-bump>=0.1.2",
]
[tool.uv]
package = true

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.sources]
agentic-kg = { workspace = true }
